Persist county and branch number (WIP)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
     }
 }
 
+repositories {
+    maven { url "http://dl.bintray.com/pixplicity/maven" }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
@@ -36,6 +40,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    compile 'com.pixplicity.easyprefs:library:1.8.1@aar'
 
     compile project(path: ':mediapicker')
 }
