Fix menu, navigation, texts + Add empty guide screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
         <activity
             android:name=".LoginActivity"
             android:theme="@style/AppTheme.Login"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:noHistory="true"/>
         <activity
             android:name=".ToolbarActivity"
             android:theme="@style/AppTheme"
