--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,10 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     compile 'com.pixplicity.easyprefs:library:1.8.1@aar'
 
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.1.6'
+
+    compile 'org.greenrobot:eventbus:3.0.0'
+
     compile project(path: ':mediapicker')
 }
