--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.6'
 
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'net.hockeyapp.android:HockeySDK:4.1.1'
 
     compile project(path: ':mediapicker')
 }
