--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ro.code4.monitorizarevot">
+<manifest package="ro.code4.monitorizarevot"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <uses-permission-sdk-23 android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission-sdk-23 android:name="android.permission.INTERNET" />
 
@@ -22,8 +23,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".StartActivity"
-            android:screenOrientation="portrait"
             android:noHistory="true"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Start">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,23 +33,25 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/AppTheme.Login"
+            android:noHistory="true"
             android:screenOrientation="portrait"
-            android:noHistory="true"/>
+            android:theme="@style/AppTheme.Login" />
         <activity
             android:name=".ToolbarActivity"
-            android:theme="@style/AppTheme"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateAlwaysHidden"/>
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name="vn.tungdx.mediapicker.activities.MediaPickerActivity"
             android:screenOrientation="portrait"
             android:theme="@style/MediaPickerTheme" />
-        <receiver android:name=".net.NetworkChangeReceiver" >
+
+        <receiver android:name=".net.NetworkChangeReceiver">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
         </receiver>
+
         <service
             android:name=".service.AuthenticatorService"
             android:exported="false">
@@ -59,6 +62,7 @@
                 android:name="android.accounts.AccountAuthenticator"
                 android:resource="@xml/authenticator" />
         </service>
+
         <service
             android:name=".service.SyncService"
             android:exported="true">
@@ -69,13 +73,15 @@
                 android:name="android.content.SyncAdapter"
                 android:resource="@xml/syncadapter" />
         </service>
-        <provider
-            android:authorities="ro.code4.monitorizarevot"
-            android:name="ro.code4.monitorizarevot.util.StubProvider"
-            android:exported="false"
-            android:syncable="true"/>
 
-        <meta-data android:name="net.hockeyapp.android.appIdentifier"
+        <provider
+            android:name="ro.code4.monitorizarevot.util.StubProvider"
+            android:authorities="@string/provider_authority"
+            android:exported="false"
+            android:syncable="true" />
+
+        <meta-data
+            android:name="net.hockeyapp.android.appIdentifier"
             android:value="91a1da8261874c718ff1caebfceb5fd1" />
     </application>
 
