Setup mock api service

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,10 @@ android {
             versionNameSuffix "m"
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
+    }
 }
 
 repositories {
@@ -62,6 +66,7 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     implementation 'com.pixplicity.easyprefs:library:1.9.0@aar'
 
