--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,12 +19,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "WEB_BASE_URL", '"http://viuat.azurewebsites.net/"'
         }
 
         debug {
             debuggable true
-            buildConfigField "String", "WEB_BASE_URL", '"http://viuat.azurewebsites.net/"'
         }
     }
 
@@ -32,7 +30,7 @@ android {
         dev {
             applicationIdSuffix '.dev'
             versionNameSuffix "d"
-            buildConfigField "String", "WEB_BASE_URL", '"http://viuat.azurewebsites.net/"'
+            buildConfigField "String", "WEB_BASE_URL", '"http://10.3.193.203:44379"'
         }
 
         prod {
@@ -42,6 +40,7 @@ android {
         mock {
             applicationIdSuffix '.mock'
             versionNameSuffix "m"
+            buildConfigField "String", "WEB_BASE_URL", '""'
         }
     }
 
