--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 
         debug {
             debuggable true
-            buildConfigField "String", "WEB_BASE_URL", '"http://viuat.azurewebsites.net/"'
+            buildConfigField "String", "WEB_BASE_URL", '"http://10.3.193.203:44379"'
         }
     }
 }
