--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,8 +72,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 
-    testImplementation 'junit:junit:4.12'
-
     implementation 'com.pixplicity.easyprefs:library:1.9.0@aar'
 
     implementation 'com.google.dagger:dagger:2.17'
@@ -87,7 +85,8 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.0.0'
     implementation 'net.hockeyapp.android:HockeySDK:4.1.1'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:' + rootProject.junitVersion
+    testImplementation 'org.mockito:mockito-core:' + rootProject.mockitoVersion
 }
 
 android.variantFilter { variant ->
@@ -103,5 +102,12 @@ android.variantFilter { variant ->
 
     if (shouldBeExcluded) {
         variant.setIgnore(true);
+    }
+}
+
+//Test Logging
+tasks.withType(Test) {
+    testLogging {
+        events "started", "passed", "skipped", "failed"
     }
 }
