--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,15 @@ buildscript {
     }
     dependencies {
 
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.3.0'
         classpath "io.realm:realm-gradle-plugin:5.7.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+
+plugins {
+    id 'com.adarshr.test-logger' version '1.6.0'
 }
 
 allprojects {
@@ -23,4 +27,9 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    junitVersion = "4.12"
+    mockitoVersion = "1.10.19"
 }
