commented out crashlytics so build won't fail without the firebase file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
-apply plugin: 'com.google.gms.google-services'
-apply plugin: 'io.fabric'
+// uncomment these to add crashlytics
+// apply plugin: 'com.google.gms.google-services'
+// apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 28
