--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,3 @@
 # These are supported funding model platforms
 
-patreon: Code4Romania
-custom: ['https://code4.ro/en/donate/', 'https://www.mightycause.com/story/Codeforromania']
+custom: ['https://code4.ro/en/donate/']
